# tilt-1

./: .gitignore  Dockerfile  Tiltfile  pyproject.toml
app/: main.py
k8s/: deployment.yaml  service.yaml
