[tool.poetry]
name = "tilt-1"
version = "0.1.0"
description = ""
authors = ["edo1z <endo.yuta@logicky.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
